syntax = "proto3";

package PRODUCTS_GRPC_PACKAGE;

service ProductServices {
  rpc GetProductById(GetProductByIdRequest) returns (stream Product);
}

message GetProductByIdRequest {
  string id = 1;
}

message Product {
  string id = 1;
  string sellerId = 2;
}